# Action_chess_plov_lovers_Technopark

./: .gitignore  GameLogic.cpp  GameLogic.h  LICENSE  README.md  TestGameLogic.cpp
client/: CMakeLists.txt  Gamesession.cpp  Gamesession.hpp  app  button.hpp  chess_game.cpp  chess_game.hpp  main.cpp  makefile  menu_window.cpp  menu_window.hpp  textbox.cpp  textbox.hpp
client/include/: Client.hpp
client/include/requests/: BaseRequest.hpp  GameRequest.hpp
client/include/responses/: BaseResponse.h  GameResponse.h
client/src/: Client.cpp  button.cpp  chess_game.cpp  menu_window.cpp
include/: client.h  figure.h  game.h  lobby.h  lobbychat.h  point.h  type.h  user.h
server/: CMakeLists.txt  main.cpp
server/include/: ClientData.h  ClientHandler.h  ClientMover.h  Game.h  GameClient.h  GameLogic.h  GameWriter.h  MainMenu.h  MainMenuClient.h  MainMenuWriter.h  RequestParser.h  Room.h  RoomClient.h  RoomController.h  RoomWriter.h  Router.h  Server.h
server/include/handlers/: BaseHandler.h  GameHandler.h  RoomHandlers.h
server/include/requests/: BaseRequest.h  GameRequest.h  RoomRequests.h
server/include/responses/: BaseResponse.h  ErrorResponse.h  GameResponse.h  RoomResponses.h
server/src/: ClientHandler.cpp  Game.cpp  GameClient.cpp  GameLogic.cpp  GameWriter.cpp  MainMenu.cpp  MainMenuClient.cpp  MainMenuWriter.cpp  RequestParser.cpp  Room.cpp  RoomClient.cpp  RoomController.cpp  RoomWriter.cpp  Router.cpp  Server.cpp  TestGameLogic.cpp
src/: client.cpp  main.cpp
